assign button displays form

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(2, 2, 59);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
